--- a/poza_MusicVAE.ipynb
+++ b/poza_MusicVAE.ipynb
@@ -6,7 +6,7 @@
       "name": "poza-MusicVAE",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN3Vezk9h0SwyL7UvHk7lhr"
+      "authorship_tag": "ABX9TyN4aDaauUH8C5nv66yZYKCK"
     },
     "kernelspec": {
       "name": "python3",
@@ -171,6 +171,8 @@
         "- 전체 시퀀스를 단일 latent vector로 압축하게 되는데 따라서 long-term 시퀀스인 경우 정보의 손실일 일어날 수 있음\n",
         "- 이 같은 문제를 해결하기 위해 `hierarchical RNN`을 디코더에 적용\n",
         "\n",
+        "![](https://i.imgur.com/y397wfb.png)\n",
+        "\n",
         "## Bidirectional Encoder\n",
         "- 2 layer 양방향 LSTM 사용\n",
         "- input 시퀀스 x로 첫번째 state vector $ \\overrightarrow{h_{T}} $ 와 $ \\overleftarrow{h_{T}} $ 를 두번째 bi-direction LSTM layer에서 얻는다.\n",
@@ -186,7 +188,7 @@
         "- 단층 RNN을 사용한 경우 -> 매우 떨어지는 샘플링 및 재구성 성능을 보임\n",
         "  - 출력 시퀀스가 생성되면서 latent state의 영향력이 점차 소실되기 때문 (vanishing)\n",
         "- 이러한 문제를 해결하기 위해 계층적 RNN 구조를 디코더에 적용함\n",
-        "- input 시퀀스 x를 중복되지 않는 U개의 sub sequence $y_u$로 나누게 되면 다음처럼 표현 할 수 있음. 여기서 $i_u$는 endpoint임\n",
+        "- input 시퀀스 x를 중복되지 않는 U개의 `sub sequence` $y_u$로 나누게 되면 다음처럼 표현 할 수 있음. 여기서 $i_u$는 endpoint임\n",
         "\n",
         "$$ y_u = \\{ x_{i_u}, x_{i_u+1}, x_{i_u+2}, ..., x_{i_u+1} -1 \\} $$\n",
         "\n",
@@ -201,9 +203,13 @@
         "- conductor가 임베딩 벡터 c를 생성하면 각 벡터는 독립적으로 fully-connected layer를 지나면서 tanh 활성함수를 통해 RNN decoder의 최종 바닥층의 초기 state를 생성함.\n",
         "- RNN 디코더는 softmax 출력층을 거치면서 auto-regressive하게 시퀀스 분포를 생성함. 여기서 디코더는 서브시퀀스 $y_{u}$에 해당하는 분포를 생성함.\n",
         "- 디코더의 바닥층에서는 매 step마다 conductor의 임베딩 $c_u$와 이전 step의 출력 토큰을 결합하여 input으로 사용함.\n",
+        "  - 이러한 계층적 구조때문에 각 서브시퀀스 $y_u$는 연결된 conductor에서 생성된 $c_u$를 통해서만 영향을 받음\n",
         "- 논문에서는 2 layer LSTM과 각 layer마다 1024 units의 decoder RNN을 사용함.\n",
         "\n",
+        "### 결과\n",
         "\n",
+        "- 논문에서는 실험을 통해 decoder의 scope를 제한하는 것이 latent code를 사용하는 long-term 구조 모델에 중요하다는 사실을 발견함\n",
+        "- 각 서브시퀀스의 끝에서 decoder의 state가 다시 conductor로 들어가는 `auto regressive conductor`에서는 성능이 좋지 않았음.\n",
         "\n",
         "\n",
         "\n"
@@ -224,12 +230,29 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# Experiments\n",
+        "\n",
+        "## Data and Training\n",
+        "\n",
+        "MIDI 데이터를 학습에 사용하기 위해서 벡터로 변환하는 전처리 과정이 필요하다.\n",
+        "\n",
+        "[magenta](https://github.com/magenta/magenta/tree/main/magenta/models/music_vae) 를 이용하여 .mid, .midi 파일을 tfrecord 포멧으로 변환시킬 수 있다. 이후 학습에 사용하면 된다!\n",
+        "\n",
+        "* tfrecord: 바이너리 데이터 포멧으로 serial 데이터를 읽는데 특화되어 있다. [참고링크](https://bcho.tistory.com/1190)"
       ],
       "metadata": {
-        "id": "1TNYdPpZlVGN"
+        "id": "ObGCN5xZNArV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install magenta"
+      ],
+      "metadata": {
+        "id": "cCAjoDznRPAE"
       },
       "execution_count": null,
       "outputs": []
@@ -237,10 +260,40 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 구글 드라이브 연결\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive/')\n",
+        "\n",
+        "# data dir\n",
+        "DATA_DIR = '/content/drive/MyDrive/musicVAE/data/groove/drummer1'\n",
+        "OUT_DIR = '/content/drive/MyDrive/musicVAE/data_out/'"
       ],
       "metadata": {
-        "id": "_JwbqxD6lU_N"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1TNYdPpZlVGN",
+        "outputId": "244799df-eab0-4ec4-eacc-e27721cf75be"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!curl https://raw.githubusercontent.com/tensorflow/magenta/main/magenta/tools/magenta-install.sh > /tmp/magenta-install.sh\n",
+        "!bash /tmp/magenta-install.sh"
+      ],
+      "metadata": {
+        "id": "EwhOfV3BTS_w"
       },
       "execution_count": null,
       "outputs": []
@@ -248,10 +301,50 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from magenta.scripts import convert_dir_to_note_sequences as mg\n",
+        "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "# convert_dir_to_note_sequences"
       ],
       "metadata": {
         "id": "wWCiCaXipcVH"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#writer = tf.data.experimental.TFRecordWriter('test.tfrecord')\n",
+        "writer = tf.io.TFRecordWriter('test.tfrecord')\n",
+        "\n",
+        "mg.convert_files(DATA_DIR, OUT_DIR, writer=writer)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wZfnX6lmUqbk",
+        "outputId": "e5f5dbcf-4c16-400d-adca-036ad7ea670b"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "INFO:tensorflow:Converting files in '/content/drive/MyDrive/musicVAE/data_out/'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "AFtV4hRsU2Zm"
       },
       "execution_count": null,
       "outputs": []
