--- a/poza_MusicVAE.ipynb
+++ b/poza_MusicVAE.ipynb
@@ -6,7 +6,8 @@
       "name": "poza-MusicVAE",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN2T0rw1k8JF3q9BJ7lnKO+"
+      "authorship_tag": "ABX9TyN0Xomg2wSniR3EgTOco16W",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,6 +19,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Sunjii/MusicVAE/blob/main/poza_MusicVAE.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -188,7 +199,7 @@
         "id": "1TNYdPpZlVGN",
         "outputId": "b3e47e1a-713a-4d70-8755-76ec21209838"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +243,7 @@
         "id": "ZB7TZtEDgRVO",
         "outputId": "ff29d273-216e-4c31-b48d-2da38a22d77f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +300,7 @@
       "metadata": {
         "id": "13Y94NDBLhKO"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,7 +404,7 @@
       "metadata": {
         "id": "G6wUE1-gu8XS"
       },
-      "execution_count": 232,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -407,7 +418,7 @@
       "metadata": {
         "id": "yOhQIOlnu8Uw"
       },
-      "execution_count": 233,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -422,7 +433,7 @@
       "metadata": {
         "id": "ESunAKn6u8SD"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -440,7 +451,7 @@
         "id": "sVCqL6Tzu8O2",
         "outputId": "7012e6ef-fc0c-4584-cc23-c1b06c90ada9"
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +501,7 @@
         "id": "pm0I4Y6gu8MJ",
         "outputId": "efb394e4-714d-4b71-dd0f-0afe85969186"
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +544,7 @@
         "id": "IVGyP8Z8u8JG",
         "outputId": "555b743d-bebe-4df2-b49c-4b3e1e8cef55"
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +586,7 @@
         "id": "ZC6_-nMEzpNr",
         "outputId": "e02b44d0-7eeb-43ee-8c69-6055ae4f4d87"
       },
-      "execution_count": 246,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -607,7 +618,7 @@
         "id": "OPNCAs5VzpLC",
         "outputId": "9b7acac4-17df-4225-ce8b-0006729199d8"
       },
-      "execution_count": 247,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,12 +671,179 @@
       "cell_type": "code",
       "source": [
         "import torch\n",
-        "from torch import nn"
+        "from torch import nn\n",
+        "from torch.nn import functional as F"
       ],
       "metadata": {
         "id": "nIXo-QJhWPHg"
       },
-      "execution_count": 55,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "VAE의 가장 핵심은 인코더-디코더 구조와 mu, sigma이다.\n",
+        "\n",
+        "먼저 인코더는 데이터를 받아와서 mu와 sigma를 출력해야 한다. 인코더는 데이터를 입력받아 hidden_size 만큼 출력하고, 이를 받아서 다시 latent_size 만큼의 mu와 sigma를 출력한다\n",
+        "\n",
+        "이 작업은 encode 함수를 통해 이루어진다.\n",
+        "\n",
+        "그 다음에는 reparameterization 과정이 필요하다. 만약 인코더의 결과물을 바로 디코더로 넘긴다면 어떻게 될까? 당연히 한 가지 값만 가지므로 그에대한 디코더 값 역시 한 값만 나오게 된다. 즉, 어떤 입력에 대해서 무조건 똑같은 output이 나오게 된다.\n",
+        "\n",
+        "하지만 VAE는 Generative 모델이다. 이는 곧 data의 분포를 가지고서 기존에 없는 새로운 data를 생성하고자 하는 것이다. 따라서 data의 분포를 샘플링 하되 reparmeterization을 적용한다.\n",
+        "\n",
+        "마지막으로 디코더 과정이다. self.decode(z)의 결과는 입력 데이터의 사이즈와 동일한 차원을 가지면서 sigmoid를 통과하므로 0~1 사이의 값을 갖게 된다. 이는 곧 input으로 투입한 데이터를 VAE를 거쳐 복원한 것이라고 볼 수 있다...\n",
+        "\n",
+        "\n",
+        "출처: https://github.com/PeterKim1/paper_code_review"
+      ],
+      "metadata": {
+        "id": "MS6tGm0pj8MT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# VAE Model\n",
+        "\n",
+        "class VAE(nn.Module):\n",
+        "  def __init__(self, input_size, hidden_size, latent_size):\n",
+        "    super(VAE, self).__init__()\n",
+        "\n",
+        "    # encode\n",
+        "    self.fc1 = nn.Linear(input_size, hidden_size)\n",
+        "    self.fc21 = nn.Linear(hidden_size, latent_size) # mu\n",
+        "    self.fc22 = nn.Linear(hidden_size, latent_size) # sigma\n",
+        "\n",
+        "    # decode\n",
+        "    self.fc3 = nn.Linear(latent_size, hidden_size)\n",
+        "    self.fc4 = nn.Linear(hidden_size, input_size)\n",
+        "\n",
+        "  def encode(self, x):\n",
+        "    h = F.relu(self.fc1(x)) # hidden_\n",
+        "    return self.fc21(h), self.fc22(h) # mu, sigma\n",
+        "\n",
+        "  def reparam(self, mu, logvar):\n",
+        "    # logvar? -> 표준편차 값이 음수가 되지 않도록 encoder의 결과값을 logs^2 함 (로그 분산)\n",
+        "    std = torch.exp(0.5 * logvar)\n",
+        "    eps = torch.rand_like(std) # 정규분포에서 숫자를 뽑게 됨\n",
+        "    # z = mu + std * eps  ### z 는 latent vector다\n",
+        "    return mu + std * eps \n",
+        "\n",
+        "  def decode(self, z):\n",
+        "    h = F.relu(self.fc3(z))\n",
+        "    return torch.sigmoid(self.fc4(h)) # input과 동일한 차원을 가지며, 0~1 사이의 값\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    mu, logvar = self.encode(x.view(-1, input_size)) # \n",
+        "    z = self.reparam(mu, logvar)\n",
+        "    return self.decode(z), mu, logvar\n",
+        "\n",
+        "\n",
+        "def loss_function(reconstruction_err, x, mu, logvar):\n",
+        "  BCE = F.binary_cross_entropy(reconstruction_err, x.view(-1, input_size), reduction='sum') # Bernoulli cross entrophy\n",
+        "  KLD = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp()) # variational lower bound. 쿨백 라이블러\n",
+        "  \n",
+        "  # BCE + KLD\n",
+        "  return BCE, KLD\n"
+      ],
+      "metadata": {
+        "id": "m60kWYgeebrg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train(epoch, model, train_loader, optimizer):\n",
+        "  model.train()\n",
+        "  train_loss = 0\n",
+        "  for bat_idx, (data, _) in enumerate(train_loader): # 라벨이 필요가 없음 _\n",
+        "    data = data.to(device)\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    recon_batch, mu, logvar = model(data)\n",
+        "\n",
+        "    BCE, KLD = loss_function(recon_batch, data, mu, logvar)\n",
+        "    loss = BCE + KLD\n",
+        "\n",
+        "    loss.backward()\n",
+        "    train_loss += loss.item()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if bat_idx % 100 == 0:\n",
+        "      print('Train epo: {} [{}/{} ({:.0f}%)]\\t Loss: {:.6f}'.format(\n",
+        "          epoch, bat_idx * len(data), len(train_loader.dataset),\n",
+        "          100. * bat_idx / len(train_loader),\n",
+        "          loss.item() / len(data)\n",
+        "          ))\n",
+        "    \n",
+        "    print('===========> Epoch: {} Avg loss: {:.4f}'.format(\n",
+        "        epoch, train_loss / len(train_loader.dataset)\n",
+        "    ))"
+      ],
+      "metadata": {
+        "id": "RBs6cHgSecTi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "VAE_model = VAE(input_size, 512, 2).to(device)\n",
+        "optimizer = optim.Adam(VAE_model.parameters(), lr=1e-3)"
+      ],
+      "metadata": {
+        "id": "zbxpdl37ecWz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "GUfxMmYuecQY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ZsuH6F6xmQ-4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "dHePilsrmQxV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "A6yQubRbmQwU"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -705,7 +883,7 @@
         "id": "dJP8WNDjzpIQ",
         "outputId": "7b245daa-1c47-4dd7-9639-70e33dff9105"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -742,7 +920,7 @@
       "metadata": {
         "id": "uHT-VPyJWR0o"
       },
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -772,7 +950,7 @@
       "metadata": {
         "id": "6LnDrnVDzpFa"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
