VAE with MNIST data 실습 코드 추가

--- a/poza_MusicVAE.ipynb
+++ b/poza_MusicVAE.ipynb
@@ -6,7 +6,7 @@
       "name": "poza-MusicVAE",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN0Xomg2wSniR3EgTOco16W",
+      "authorship_tag": "ABX9TyOQ1ihRRTBU+ZWl5AwFFxN4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -668,11 +668,39 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### VAE with MNIST data"
+      ],
+      "metadata": {
+        "id": "XN76OpTGsrDC"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "import datetime\n",
         "import torch\n",
+        "import torchvision\n",
         "from torch import nn\n",
-        "from torch.nn import functional as F"
+        "from torch.nn import functional as F\n",
+        "\n",
+        "from tqdm.auto import tqdm\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from torch.utils.tensorbard import SummaryWriter\n",
+        "\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "\n",
+        "current_time = datetime.datetime.now() + datetime.timedelta(hours=9) # 시차\n",
+        "current_time = current_time.strftime('%Y-%m-%d-%H:%M')\n",
+        "saved_loc = os.path.join('/content/drive/MyDrive/VAE_Result', current_time)\n",
+        "os.mkdir(saved_loc)\n",
+        "\n",
+        "writer = SummaryWriter(saved_loc)\n",
+        "EPOCHS = 50\n",
+        "BATCH_SIZE = 200"
       ],
       "metadata": {
         "id": "nIXo-QJhWPHg"
@@ -769,6 +797,11 @@
         "    BCE, KLD = loss_function(recon_batch, data, mu, logvar)\n",
         "    loss = BCE + KLD\n",
         "\n",
+        "    writer.add_scalar(\"Train/Reconstruction Error\", BCE.item(), batch_idx + epoch * (len(train_loader.dataset)/BATCH_SIZE) )\n",
+        "    writer.add_scalar(\"Train/KL-Divergence\", KLD.item(), batch_idx + epoch * (len(train_loader.dataset)/BATCH_SIZE) )\n",
+        "    writer.add_scalar(\"Train/Total Loss\" , loss.item(), batch_idx + epoch * (len(train_loader.dataset)/BATCH_SIZE) )\n",
+        "\n",
+        "\n",
         "    loss.backward()\n",
         "    train_loss += loss.item()\n",
         "    optimizer.step()\n",
@@ -805,7 +838,31 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def test(epoch, model, test_loader):\n",
+        "  model.eval()\n",
+        "  test_loss = 0\n",
+        "  with torch.no_grad():\n",
+        "    for bat_idx, (data, _) in enumerate(test_loader):\n",
+        "      data = adata.to(device)\n",
+        "\n",
+        "      recon_batch, mu, logvar = model(data)\n",
+        "      BCE, KLD = loss_function(recon_batch, data, mu, logvar)\n",
+        "\n",
+        "      loss = BCE + KLD\n",
+        "\n",
+        "      writer.add_scalar(\"Test/Reconstruction Error\", BCE.item(), batch_idx + epoch * (len(test_loader.dataset)/BATCH_SIZE) )\n",
+        "      writer.add_scalar(\"Test/KL-Divergence\", KLD.item(), batch_idx + epoch * (len(test_loader.dataset)/BATCH_SIZE) )\n",
+        "      writer.add_scalar(\"Test/Total Loss\" , loss.item(), batch_idx + epoch * (len(test_loader.dataset)/BATCH_SIZE) )\n",
+        "\n",
+        "      test_loss += loss.item()\n",
+        "\n",
+        "      if bat_idx == 0:\n",
+        "        n = min(data.size(0), 8) # test_loader 데이터 8개와 이를 VAE를 거쳐 뽑은 reconstruction 결과 8개와 합친다 -> 16, 1, 28, 28\n",
+        "        comparison = torch.cat([data[:n], recon_batch.view(BATCH_SIZE, 1, 28, 28)[:n]]) # (16, 1, 28, 28)\n",
+        "        grid = torchivision.utils.make_grid(comparison.cpu()) # (3, 62, 242)\n",
+        "        writer.add_image('Test image - Above: Realdata, below: reconstruction data', gride, epoch) # tensorboard\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "GUfxMmYuecQY"
@@ -816,7 +873,13 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def latent_to_image(epoch, model):\n",
+        "  # latent를 이미지로 변환\n",
+        "  with torch.no_grad():\n",
+        "    sample = torch.randn(64, 2).to(device) # 랜덤 값 생성 (평균0, 분산1 가우시안 분포)\n",
+        "    recon_image = model.decode(sample).cpu() # decode를 통해 reconstruction 이미지 생성\n",
+        "    grid = torchvision.utils.make_grid(recon_image.view(64, 1, 28, 28))\n",
+        "    writer.add_image('Latent to Image', grid, epoch)"
       ],
       "metadata": {
         "id": "ZsuH6F6xmQ-4"
@@ -827,7 +890,14 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 학습 진행\n",
+        "for epoch in tqdm(range(0, EPOCHS)):\n",
+        "  train(epoch, VAE_model, trainloader, optimizer)\n",
+        "  test(epoch, VAE_model, testloader)\n",
+        "  print()\n",
+        "  latent_to_image(epoch, VAE_model)\n",
+        "\n",
+        "writer.close()"
       ],
       "metadata": {
         "id": "dHePilsrmQxV"
@@ -838,13 +908,67 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%load_ext tensorboard\n",
+        "%tensorboard --logdir='/content/drive/MyDrive/VAE_Result'"
       ],
       "metadata": {
         "id": "A6yQubRbmQwU"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "p0rJ9t2rq99x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "taQETyFFq96b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "dgVVaP3Jq93w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ZDhPseTLq905"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## VAE with music midi"
+      ],
+      "metadata": {
+        "id": "HxfjKyn3sxm6"
+      }
     },
     {
       "cell_type": "code",
